# DotMan

./: .gitignore  LICENSE  README.md
cli/: Cargo.toml
cli/src/: apply.rs  cli.rs  config.rs  main.rs  utils.rs
cli/src/git/: clone_from.rs  commit.rs  init.rs  mod.rs  pull.rs  push.rs  set_remote_url.rs
cli/src/source/: add.rs  link.rs  list.rs  mod.rs  remove.rs  unlink.rs
template_engine/: Cargo.toml
template_engine/src/: lib.rs
template_engine/src/tests/: engine.rs  expressions.rs  mod.rs  string_replacement.rs  tokens.rs
